--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
 img {
   float: left;
+  width: 20%;
+}
+
+.editing{
+  border: 3px solid red;
+}
+
+.sidebar {
+  width: 30%;
+  float: right;
+  background-color: yellow;
 }
